--- a/404.html
+++ b/404.html
@@ -1,14 +1,10 @@
-<html>
-    <head>
-        <title>404 Not Found</title>
-    </head>
-<body>
-<center>
-    <h1>404 Not Found</h1>
-</center>
-<hr>
-    <center>
-        nginx/1.18.0 (Ubuntu)
-    </center>
-</body>
+<html><head>
+<title>404 Not Found</title>
+</head>
+    <body>
+        <h1>Not Found</h1>
+        <p>The requested URL was not found on this server.</p>
+        <hr>
+        <address>Apache/2.4.51 (Unix) Server at lanseicer.xyz Port 80</address>
+    </body>
 </html>
