--- a/404.html
+++ b/404.html
@@ -1,10 +1,13 @@
-<html><head>
-<title>404 Not Found</title>
-</head>
-    <body>
-        <h1>Not Found</h1>
-        <p>The requested URL was not found on this server.</p>
-        <hr>
-        <address>Apache/2.4.51 (Unix) Server at lanseicer.xyz Port 80</address>
-    </body>
-</html>
+<html><head><title>404 Not Found</title><style type="text/css" id="operaUserStyle"></style></head>
+<body>
+<center><h1>404 Not Found</h1></center>
+<hr><center>nginx/1.22.1</center>
+
+
+
+
+
+
+
+
+</body></html>
